# ucd-csci2312-pa4

./: .gitignore  Advantage.cpp  Advantage.h  Agent.cpp  Agent.h  AggressiveAgentStrategy.cpp  AggressiveAgentStrategy.h  CMakeLists.txt  DefaultAgentStrategy.cpp  DefaultAgentStrategy.h  ErrorContext.cpp  ErrorContext.h  Exceptions.cpp  Exceptions.h  Food.cpp  Food.h  Game.cpp  Game.h  Gaming.h  GamingTests.cpp  GamingTests.h  PA4-FAQ.md  PA5FAQ.md  Piece.cpp  Piece.h  README.md  Resource.cpp  Resource.h  Simple.cpp  Simple.h  Strategic.cpp  Strategic.h  Strategy.h  main.cpp
examples/: virtual_operator.cpp
